--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>27.0-jre</version>
+      <version>32.0.0</version>
     </dependency>
     <!--<dependency>-->
       <!--<groupId>com.selfjarconflict.bigdata.phoenix</groupId>-->
